fix footer spacing

--- a/src/main.css
+++ b/src/main.css
@@ -126,17 +126,27 @@ label[for='theme-toggle']:hover {
 .footer-bottom {
   background-color: var(--background-color);
   color: var(--text-color);
-  padding: 0.25rem 4rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 0.5rem;
   align-items: center;
+  text-align: center;
   border-top: 1px solid var(--link-hover-color);
   transition: background-color 300ms ease;
+}
+
+.footer-bottom p {
+  margin: 0;
 }
 
 @media (min-width: 768px) {
   body { font-size: large; }
   .content { width: 66ch; }
-  .footer-bottom { flex-direction: row; }
+
+  .footer-bottom {
+    flex-direction: row;
+    padding: 1.25rem 4rem;
+  }
 }
